--- a/style.css
+++ b/style.css
@@ -1,3 +1,43 @@
-h1 {text-align: center;}
-body {width:500px; font-family: georgia; font-size:20px; margin: auto;}
-textarea {width:100%; height:300px;}
+html {
+  background-color: darkseagreen;
+  color: white;
+}
+
+h1, h2, {text-align: center; margin:0px; padding: 0px;}
+
+h1 {
+  font-size: 80px;
+  margin-bottom: 10px;
+}
+
+h3 {text-decoration: underline;}
+
+a:link, a:visited {color:inherit; text-decoration: underline;}
+
+body {
+  max-width: 100%;
+  width: 500px;
+  font-family: georgia;
+  font-size: 20px;
+  margin: auto;
+  font-family: "futura-pt";
+}
+
+textarea {
+  width: 100%;
+  height: 300px;
+}
+
+button {
+  background-color: white;
+  width: 200px;
+  height: 30px;
+  margin: auto;
+  border: none;
+  display: block
+}
+
+button:hover {
+  cursor: pointer;
+  background-color: aliceblue;
+}
