--- a/style.css
+++ b/style.css
@@ -3,16 +3,28 @@ html {
   color: white;
 }
 
-h1, h2, {text-align: center; margin:0px; padding: 0px;}
+h1,
+h2,
+{
+  text-align: center;
+  margin: 0px;
+  padding: 0px;
+}
 
 h1 {
   font-size: 80px;
   margin-bottom: 10px;
 }
 
-h3 {text-decoration: underline;}
+h3 {
+  text-decoration: underline;
+}
 
-a:link, a:visited {color:inherit; text-decoration: underline;}
+a:link,
+a:visited {
+  color: inherit;
+  text-decoration: underline;
+}
 
 body {
   max-width: 100%;
@@ -23,12 +35,14 @@ body {
   font-family: "futura-pt";
 }
 
-body section {padding:10px;}
+body section {
+  padding: 10px;
+}
 
 textarea {
   width: 100%;
   height: 300px;
-  padding:10px;
+  padding: 10px;
 }
 
 button {
@@ -45,3 +59,13 @@ button:hover {
   cursor: pointer;
   background-color: aliceblue;
 }
+
+.codeblock {
+  font-family: "Courier New", Courier, monospace;
+  background-color:#F1F1F1;
+  color: black;
+  padding:10px;
+}
+
+.code {color:red;}
+small {margin-bottom: 20px; display: block;}
