--- a/here/stories.css
+++ b/here/stories.css
@@ -2,7 +2,7 @@
 header section {width:600px; padding:10px; margin:auto; max-width:90%;}
 #localstories {float:right;}
 a:link, a:visited {color:inherit; text-decoration: none;}
-header a:link, header a:visited {color:darkseagreen;}
+header #localstories a:link, header #localstories a:visited {color:darkseagreen;}
 header a:hover {text-decoration: underline;}
 #heading {border-style:solid; border-width:0 0 0 4px; margin-right:10px; margin-top:100px;}
 h1 {margin:10px 0 10px 0; text-align: right;}
@@ -12,12 +12,25 @@ header {width:100%; background-color:rgba(0,0,0,0.8); margin:0px; color:white; p
 html, body {margin:0px; padding:0px; font-family:"futura-pt";}
 
 .front {background-color:darkseagreen;}
-#home {width:600px; margin:auto;}
+.front footer {clear:both; position:relative; top:90px; color:white;}
+#home {width:600px; margin:auto; max-width: 100%;}
 #intro {width:150px; float:right; top:75px; position:relative; color:white;}
+#intro a:link {text-decoration: underline;}
 #intro p {padding: 0px; margin:0 0 10px 0px;}
-#cover {float:left; width:350px; padding:20px; position: relative; top:80px; color:white; border-style:solid; border-width:3px; border-color:white; cursor: pointer;}
+#cover {float:left; width:350px; padding:20px; position: relative; top:80px; color:white; border-style:solid; border-width:3px; border-color:white;}
 #cover h1 {font-size:80px;}
 #cover h2 {color:white; font-size:32px;}
 #cover h3 {color:white; font-size:20px;}
 #cover ul {font-size:16px;}
 #cover li {list-style:square;}
+
+/*Mobile front cover*/
+
+@media (max-width:650px){
+  
+  #home {width: 100%;}
+  #cover {margin:auto; float:none; width:80%; top:60px;}
+  #intro {float:none; clear:both; width:95%; position:relative; top:80px; margin: auto; text-align: justify;}
+  .front footer {border-style:solid; border-width:2px 0 0 0; text-align: center; padding:10px;}
+  
+}
