--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 body {
-  max-width: 100%;
+  max-width: 90%;
   width: 600px;
   font-size: 20px;
   margin: auto;
@@ -14,17 +14,37 @@ nav {
   position: fixed;
   z-index: 2;
   width: 100%;
+  max-width: 100%;
 }
 
-nav {position: fixed;}
-nav ul {width:600px; margin:auto; text-align: center;}
-nav li {list-style: none; display: inline-block; padding:10px; line-height: 100%; vertical-align: middle}
-nav li.github {position: relative; top:3px;}
-
-nav a.home {color:darkseagreen;}
-
-#main {position: relative; top:60px;}
-
+nav {
+  position: fixed;
+}
+nav ul {
+  padding: 0px;
+  width: 600px;
+  max-width: 100%;
+  margin: auto;
+  text-align: center;
+}
+nav li {
+  list-style: none;
+  display: inline-block;
+  padding: 10px;
+  line-height: 100%;
+  vertical-align: middle
+}
+nav li.github {
+  position: relative;
+  top: 3px;
+}
+nav a.home {
+  color: darkseagreen;
+}
+#main {
+  position: relative;
+  top: 70px;
+}
 h1,
 h2,
 {
@@ -44,4 +64,3 @@ a:visited {
   color: inherit;
   text-decoration: none;
 }
-
