--- a/maker.css
+++ b/maker.css
@@ -3,6 +3,8 @@ html {
   color: rgba(0, 0, 0, 0.8);
 }
 h1 {
+  margin-top:25px;
+  margin-bottom: 25px;
   font-size: 150%;
 }
 h1,
@@ -13,7 +15,7 @@ input,
 textarea {
   display: block;
   width: 100%;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 #story-name {
   font-size: 80px;
