--- a/maker.css
+++ b/maker.css
@@ -3,7 +3,7 @@ html {
   color: rgba(0, 0, 0, 0.8);
 }
 h1 {
-  margin-top:25px;
+  margin-top: 25px;
   margin-bottom: 25px;
   font-size: 150%;
 }
@@ -40,6 +40,8 @@ textarea {
   font-size: 80%;
 }
 button {
+  margin: auto;
+  width:200px;
   background-color: darkseagreen;
   color: white;
   padding: 10px;
@@ -85,4 +87,15 @@ button {
 }
 #preview article {
   font-size: 30px;
+}
+#upload {
+  background-color: darkseagreen;
+  color: white;
+  padding: 10px;
+  font-size: 100%;
+  font-family: "futura-pt";
+  border-style: solid;
+  border-color: black;
+  cursor: pointer;
+  display: block;
 }
