--- a/library.css
+++ b/library.css
@@ -7,8 +7,8 @@ h2 {
   color: darkseagreen;
 }
 
-#stories li {font-size:30px; text-align: left; margin-bottom: 20px;}
-#stories li {line-height: 100%; max-width: 400px;}
+#stories li {font-size:30px; text-align: left; margin-bottom: 20px; word-wrap: break-word}
+#stories li {line-height: 100%; max-width: 100%;}
 .date {font-size: 15px; display: block;}
 .author {color: darkseagreen;}
 .title {font-weight: bold;}
